[Bug #164927648 ]Remove extra white space
Remove extra white space"

--- a/UI/assets/css/pagestyle.css
+++ b/UI/assets/css/pagestyle.css
@@ -17,9 +17,9 @@
   --limeColor: lime;
 }
 html, body{
-  width: 100vw;
+  width: 100vw !important;
   margin: 0;
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
 body {
   min-width: 635px !important;
